# PoolSignal

./: .dev.vars.example  .gitignore  README.md  SECURITY.md  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
.github/workflows/: ci.yml  via-snapshot.yml
.openai/: hosting.json
app/: PoolSignalApp.tsx  globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
app/api/agent-runs/: route.ts
app/api/change-events/: route.ts
app/api/live-data/: route.ts
artifacts/: PoolSignal_Campaign_Review_Pack.xlsx
db/: index.ts  schema.ts
docs/: ARCHITECTURE.md  DATA_SOURCES.md  DEMO_SCRIPT.md  MODEL_CARD.md  PRODUCT_WALKTHROUGH.md
drizzle/: 0000_outstanding_eternals.sql  0001_live_public_sources.sql  0002_change_driven_processing.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
lib/: agent-engine.ts  agent-versions.ts  change-processor.ts  credential-security.ts  demo-data.ts  github-oidc.ts  live-agent-engine.ts  live-data.ts  live-store.ts  reviewer-auth.ts
pipeline/: pyproject.toml
pipeline/data/: demo_signal.json
pipeline/poolsignal/: __init__.py  agents.py  cli.py  ingestion.py  models.py  orchestrator.py  policy.py  repository.py
pipeline/tests/: test_orchestrator.py
powerbi/: README.md  measures.dax
powerbi/data/: dim_date.csv  dim_entity.csv  dim_product.csv  fact_campaign_activity.csv  fact_review_case.csv
scripts/: publish-via-snapshot.mjs
tests/: agent-engine.test.mjs  credential-security.test.mjs  github-oidc.test.mjs  live-data.test.mjs  rendered-html.test.mjs
warehouse/: schema.sql
worker/: index.ts
(+2 files in other folders)
