[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "poolsignal"
version = "0.1.0"
description = "Evidence-first agentic licensing intelligence pipeline"
requires-python = ">=3.11"

[project.scripts]
poolsignal = "poolsignal.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["poolsignal*"]
